# Chip8

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  \  main  premake5.lua  run.sh
include/: disassemble.h  emu.h  font.h  instruction.h
src/: disassemble.c  disassemble.h  emu.c  emu.h  instruction.c  instruction.h  main.c  notes.txt  test  test.c
src/misc/: dissasembly.txt  hexdump.txt
